// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can accept custom labels 1`] = `
<div
  className="Modal"
  data-test-id="cf-ui-modal-confirm"
  style={
    Object {
      "width": "520px",
    }
  }
>
  <div>
    <Header
      testId="cf-ui-modal-header"
      title="Are you sure?"
    >
      <div
        className="ModalHeader"
        data-test-id="cf-ui-modal-header"
      >
        <h1
          className="ModalHeader__title"
        >
          Are you sure?
        </h1>
      </div>
    </Header>
    <Content
      testId="cf-ui-modal-content"
    >
      <div
        className="ModalContent"
        data-test-id="cf-ui-modal-content"
      >
        ModalConfirm
      </div>
    </Content>
    <Controls
      testId="cf-ui-modal-controls"
    >
      <div
        className="ModalControls"
        data-test-id="cf-ui-modal-controls"
      >
        <Button
          buttonType="negative"
          disabled={false}
          loading={false}
          onClick={[Function]}
          testId="cf-ui-modal-confirm-confirm-button"
        />
        <Button
          buttonType="muted"
          onClick={[Function]}
          testId="cf-ui-modal-confirm-cancel-button"
        />
      </div>
    </Controls>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  className="Modal"
  data-test-id="cf-ui-modal-confirm"
  style={
    Object {
      "width": "520px",
    }
  }
>
  <div>
    <Header
      testId="cf-ui-modal-header"
      title="Are you sure?"
    >
      <div
        className="ModalHeader"
        data-test-id="cf-ui-modal-header"
      >
        <h1
          className="ModalHeader__title"
        >
          Are you sure?
        </h1>
      </div>
    </Header>
    <Content
      testId="cf-ui-modal-content"
    >
      <div
        className="ModalContent"
        data-test-id="cf-ui-modal-content"
      >
        ModalConfirm
      </div>
    </Content>
    <Controls
      testId="cf-ui-modal-controls"
    >
      <div
        className="ModalControls"
        data-test-id="cf-ui-modal-controls"
      >
        <Button
          buttonType="positive"
          disabled={false}
          loading={false}
          onClick={[Function]}
          testId="cf-ui-modal-confirm-confirm-button"
        />
        <Button
          buttonType="muted"
          onClick={[Function]}
          testId="cf-ui-modal-confirm-cancel-button"
        />
      </div>
    </Controls>
  </div>
</div>
`;
